<resources>
    <string name="app_name">Contact App</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="prompt_password">Please enter your password</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="email_id">Email ID</string>
    <string name="err_email">Enter your email Address!!</string>
    <string name="err_password">Enter your Password</string>
    <string name="err_name">Enter valid name</string>
    <string name="err_password_validation">Password too short, enter mimimum 6 charcters</string>
    <string name="user_not_exist">User Not exist</string>
    <string name="create_new_contact">Create new contact</string>
    <string name="update_contact">Update contact</string>
    <string name="update">Update</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="delete_contact_message">Do you want Delete contact?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="add">Add new contact</string>
    <string name="old_password">Old password</string>


</resources>
